fix: Remove gap from .physicalInfoBox for improved layout

--- a/src/app/components/pokemon-details/pokemon-details-physical-info/pokemon-details-physical-info.css
+++ b/src/app/components/pokemon-details/pokemon-details-physical-info/pokemon-details-physical-info.css
@@ -8,7 +8,6 @@
 @media (min-width: 900px) {
   .physicalInfoBox {
     display: flex;
-    gap: 4vw;
     width: 100%;
     margin-top: 2vh;
   }
